# wordle-alarm

./: .gitignore  README.md  auth.py  main.py  pyproject.toml  scheduler.py  solver.py  wordle-answers.csv
.cursor/commands/: apply-rule.md
.cursor/rules/architecture/: RULE.md
.cursor/rules/cleancode/: RULE.md
.cursor/rules/docs/: RULE.md
.cursor/rules/python/: RULE.md
.cursor/rules/swift/: RULE.md
.github/workflows/: ci.yml
install/: install.sh  projects_wordle-alarm.service  projects_wordle_alarm.service
src/: auth.py  config.py  main.py  scheduler.py  solver.py  values.py.example
tests/: test_config.py
