[tool.black]
line-length = 110
target-version = ['py312']
include = '\.py'

[tool.poetry]
name = "wordle-alarm"
version = "0.1.0"
description = ""
authors = ["momonala <mnalavadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
playwright = "*"
requests = "*"
schedule = "*"
pandas = "^2.3.0"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
